--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
-databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+databases: 
+  - name: postgres
+    databaseName: the_rial_news_development
+    user: postgres
     plan: free
 
 services:
   - type: web
-    name: mysite
+    name: postgres
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: postgres
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
